src/test/tests/syntaxError/begins.wacc
# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begins skip end